Commit for jenkins run 1

--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,8 @@
                     <execution>
                         <phase>integration-test</phase>
                         <goals>
-                            <goal>integration-test</goal>
+<!--                            <goal>integration-test</goal>-->
+                            <goal>verify</goal>
                         </goals>
                     </execution>
                 </executions>
