Commit for jenkins run 3

--- a/pom.xml
+++ b/pom.xml
@@ -113,15 +113,17 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <id>integration</id>
                         <phase>integration-test</phase>
                         <goals>
                             <goal>integration-test</goal>
                         </goals>
                     </execution>
                     <execution>
-                        <phase>integration-test</phase>
+                        <id>verify</id>
+                        <phase>verify</phase>
                         <goals>
-                            <goal>integration-test</goal>
+                            <goal>verify</goal>
                         </goals>
                     </execution>
                 </executions>
